# memilio

./: map.py  map_apply_border_weights.cpp  map_reader.cpp  map_reader.h
coverage/cpp/: index-sort-f.html  index-sort-l.html  index.html
coverage/cpp/memilio/compartments/: compartmentalmodel.h.func-sort-c.html  compartmentalmodel.h.func.html  compartmentalmodel.h.gcov.html  index-sort-f.html  index-sort-l.html  index.html  parameter_studies.h.func-sort-c.html  parameter_studies.h.func.html  parameter_studies.h.gcov.html  simulation.h.func-sort-c.html  simulation.h.func.html  simulation.h.gcov.html
coverage/cpp/memilio/data/: analyze_result.cpp.func-sort-c.html  analyze_result.cpp.func.html  analyze_result.cpp.gcov.html  analyze_result.h.func-sort-c.html  analyze_result.h.func.html  analyze_result.h.gcov.html  index-sort-f.html  index-sort-l.html  index.html
coverage/cpp/memilio/epidemiology/: age_group.h.func-sort-c.html  age_group.h.func.html  age_group.h.gcov.html  contact_matrix.h.func-sort-c.html  contact_matrix.h.func.html  contact_matrix.h.gcov.html  damping.h.func-sort-c.html  damping.h.func.html  damping.h.gcov.html  damping_sampling.h.func-sort-c.html  damping_sampling.h.func.html  damping_sampling.h.gcov.html  index-sort-f.html  (+17 more)
coverage/python/: d_13294cae4c6dd695___init___py.html  d_7c56ff4e3a7418d3___init___py.html  d_b020538f8f64ceda___init___py.html  d_b020538f8f64ceda_data_generation_py.html  d_b020538f8f64ceda_model_py.html  d_b020538f8f64ceda_network_architectures_py.html  d_e523bb61861eaa0b___init___py.html  d_e523bb61861eaa0b_secir_py.html  index.html  status.json
cpp/: CMakeLists.txt
cpp/examples/: CMakeLists.txt  abm_adapter.h  hybrid-loc-Germany.cpp  hybrid-lok.cpp  hybrid.cpp  hybrid.h  mpm_abm.cpp  mpm_abm_rate_estimation.cpp  mpm_pdmm.cpp  mpm_smm.cpp  pdmm.cpp  quad_well.cpp
cpp/hybrid_paper/: ABM_PDMM.cpp  CMakeLists.txt  PDMM.cpp  adoption_rate_fitting.cpp  calc_num_transitions.cpp  contact_frequency_counting.cpp  create_agents.cpp  dlib_example.cpp  estimate_transition_rates.cpp  extinction_model.cpp  fitting_trial.cpp  hybridization.cpp  infection_state.h  initialization.cpp  initialization.h  k-model.cpp  map_reader.cpp  metaregion_sampler.h  mpm_abm_sim.cpp  test.cpp  transition_rate_fitting.cpp  transition_rate_fitting_random_search.cpp  travel_time_heuristic.cpp  weighted_gradient.h  weighted_potential.h
cpp/hybrid_paper/munich/: ABM_PDMM.cpp  adoption_rate_fitting.cpp  create_agents.cpp  estimate_transition_rates.cpp  hybridization.cpp  map_reader.cpp  mpm_abm_sim.cpp  munich_setup.h  sensitivity_analysis_ABM_PDMM.cpp  sensitivity_analysis_setup_munich.h  sensitivity_analysis_spatial_hybrid.cpp  sensitivity_analysis_spatial_hybrid_fcts.cpp  sensitivity_analysis_spatial_hybrid_fcts.h  spatial_hybridization.cpp  transition_rate_fitting_random_search.cpp  travel_time_heuristic.cpp
cpp/hybrid_paper/quad_well/: ABM_PDMM.cpp  estimate_transition_rates.cpp  quad_well_setup.h  runtime_analysis.cpp  sensitivity_analysis_ABM_PDMM.cpp  sensitivity_analysis_setup.h  sensitivity_analysis_setup_qw.h  sensitivity_analysis_spatial_hybrid.cpp  sensitivity_analysis_spatial_hybrid_fcts.cpp  sensitivity_analysis_spatial_hybrid_fcts.h  spatial_hybridization.cpp  temporal_hybrid.cpp
cpp/memilio/: config.h  config_internal.h.in
cpp/memilio/compartments/: simulation.h
cpp/memilio/math/: integrator.h
cpp/models/mpm/: CMakeLists.txt  abm.h  metapopulation.h  model.cpp  model.h  pdmm.h  region.h  smm.h  utility.cpp  utility.h
cpp/models/mpm/potentials/: commuting_potential.h  map_reader.cpp  map_reader.h  potential_germany.h
cpp/simulations/: CMakeLists.txt  transition_rate_estimation.cpp
data/mobility/: commuter_migration_scaled_states.txt  twitter_scaled_1252_states.txt
documentation/: README_8md.html  ____init_____8py.html  abm_2infection__state_8h_source.html  abm_2parameters_8h.html  abm_2parameters_8h_source.html  abm_2simulation_8cpp.html  abm_8h.html  abm_8h_source.html  adapt__rk_8cpp.html  adapt__rk_8h.html  adapt__rk_8h_source.html  age_8h.html  age_8h_source.html  age__group_8h_source.html  annotated.html  binary__serializer_8h_source.html  classes.html  classmemilio_1_1epidata_1_1getDataIntoPandasDataFrame_1_1DataError.html  classmemilio_1_1epidata_1_1progress__indicator_1_1Dots-members.html  classmemilio_1_1epidata_1_1progress__indicator_1_1Dots.html  classmemilio_1_1epidata_1_1progress__indicator_1_1Percentage-members.html  classmemilio_1_1epidata_1_1progress__indicator_1_1Percentage.html  classmemilio_1_1epidata_1_1progress__indicator_1_1ProgressIndicator-members.html  classmemilio_1_1epidata_1_1progress__indicator_1_1ProgressIndicator.html  classmemilio_1_1epidata_1_1progress__indicator_1_1Spinner-members.html  classmemilio_1_1epidata_1_1progress__indicator_1_1Spinner.html  classmio_1_1ByteStream.html  classmio_1_1ContactMatrix-members.html  classmio_1_1ContactMatrix.html  classmio_1_1ContactMatrixGroup-members.html  classmio_1_1ContactMatrixGroup.html  classmio_1_1ControlledStepperWrapper-members.html  classmio_1_1ControlledStepperWrapper.html  classmio_1_1CustomIndexArray-members.html  classmio_1_1CustomIndexArray.html  classmio_1_1DampingMatrixExpression-members.html  classmio_1_1DampingMatrixExpression.html  classmio_1_1DampingMatrixExpressionGroup-members.html  classmio_1_1DampingMatrixExpressionGroup.html  classmio_1_1DampingSampling-members.html  (+746 more)
documentation/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_13.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  (+131 more)
scripts/: agents_scatter.py  mpm_plotter.py  plot_map.py  plot_movement.py  plot_percentiles.py  plot_quad_well.py  plot_runtime.py  plot_scaling.py  plot_transitions.py  plt.py  sensitivity.py
(+315 files in other folders)
